--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -85,12 +85,12 @@ h1, h2, h3, h4, h5, h6{font-size: inherit; font-weight: inherit;}
 img{vertical-align: top;}
 a:link, a:hover, a:visited, a:active{text-decoration: none; color: inherit;}
 button{border: none; background: none; cursor: pointer; font-family: inherit; font-size: inherit; color: inherit;}
-nav, section{display: block;}
+nav, section, article{display: block;}
 
 /* common class */
 .p_r{position: relative;}
 .p_a{position: absolute;}
-.clesrfix:after{content: ""; display: block; clear: both;}
+.clearfix:after{content: ""; display: block; clear: both;}
 
 body{font-family: notoS; font-weight: 400; font-size: 18px; color: #555555; line-height: 1.7; letter-spacing: -0.04em;}
 
@@ -99,7 +99,6 @@ body{font-family: notoS; font-weight: 400; font-size: 18px; color: #555555; line
     position: fixed; top: 50px; left: 50px; z-index: 1000;
     img{width: 100px;}
 }
-
 #indicator{
     position: fixed; top: 50%; right: 125px; margin-top: -168px; width: 200px; height: 336px; font-family: montS; font-size: 35px; font-weight: 100; z-index: 1000;
     ul{position: absolute; top: 0; right: 0;}
@@ -285,14 +284,58 @@ body{font-family: notoS; font-weight: 400; font-size: 18px; color: #555555; line
 }
 
 /* sub common */
-.info_head{@include borderBox; width: 100%; height: 350px; padding: 50px 0;}
-.info_head ul li, .info_body ul li{float: left;}
-
-#ts_ifhd{
-    color: #fff; background: #ca1a37;
+.info_head{
+    @include borderBox;
+    width: 100%; height: 350px; padding-top: 2.8vw; padding-bottom: 2.8vw; margin-bottom: 100px;
+    ul li h2, ul li a:after{@include transition(all 0.4s);}
+    ul li h2:hover{color: #ffdeaa;}
     .inhead1, .inhead2{width: 60%; margin: 0 auto;}
     .inhead1{
         h2{font-size: 50px; font-weight: 700;}
         p{width: 66%; margin-left: 30%; margin-top: -70px;}
     }
+    .inhead2 li{
+        margin-top: 2.5vw; margin-left: 100px;
+        &:first-child{margin-left: 0;}
+    }
+    .inhead2 li p, .inhead2 li a{font-size: 15px; font-weight: 300; display: block;}
+    .inhead2 li a{position: relative;}
+    .inhead2 li a:after{
+        content: ""; position: absolute; bottom: 0; left: 0; width: 0; height: 1px; background: #fff;
+    }
+    .inhead2 li a:hover:after{width: 100%;}
+}
+.info_head ul li, .info_body ul li{float: left;}
+.info_body{
+    width: 100%;
+    article{margin: 50px auto;}
+    article h3, article > p{text-align: center;}
+    article h3{font-family: montS; font-size: 50px; font-weight: 500; margin-bottom: 50px;}
+    article > p{margin-top: 50px;}
+}
+
+#ts_ifhd{color: #fff; background: #ca1a37;}
+
+#ts_ifbd{
+    article{width: 1280px;}
+    .view{
+        height: 900px;
+        li{margin-left: 50px;}
+        li:first-child{margin-left: 0;}
+        li img{@include boxShadow(0 3px 5px rgba(0, 0, 0, 0.3));}
+    }
+    .color{
+        height: 500px; text-align: center;
+        ul{width: 750px; margin: 0 auto;}
+        ul li{
+            margin-left: 75px;
+            &:first-child{margin-left: 0;}
+            span{@include radius(50%); display: block; width: 200px; height: 200px; color: #fff; font-size: 35px; font-weight: 700; line-height: 200px;}
+            &:nth-child(1) span{background: #ca1a37;}
+            &:nth-child(2) span{background: #d58d3f;}
+            &:nth-child(3) span{background: #777777;}
+        }
+        > p{width: 700px; margin-left: auto; margin-right: auto;}
+    }
+
 }
